--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/Chetn11/Chetn11.github.io",
+  "homepage": "https://Chetn11.github.io",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
